[gd_scene load_steps=32 format=2]

[ext_resource path="res://components/home_screen/home_screen.gd" type="Script" id=1]
[ext_resource path="res://app_core/app_core.gd" type="Script" id=2]
[ext_resource path="res://components/questions_box/questions.gd" type="Script" id=3]
[ext_resource path="res://components/score_box/score_li.tscn" type="PackedScene" id=4]
[ext_resource path="res://components/quiz_box/quiz_box_btn.tscn" type="PackedScene" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://components/intro_screen/intro_ui.gd" type="Script" id=7]
[ext_resource path="res://components/quiz_select/quiz_select_category.gd" type="Script" id=8]
[ext_resource path="res://components/main_ui/main_ui.gd" type="Script" id=9]
[ext_resource path="res://components/quiz_select/quiz_select.gd" type="Script" id=10]
[ext_resource path="res://components/quiz_box/quiz_box.gd" type="Script" id=11]
[ext_resource path="res://components/quiz_select/quiz_select_type.gd" type="Script" id=12]
[ext_resource path="res://components/quiz_select/timer_select.gd" type="Script" id=13]
[ext_resource path="res://components/categories_box/categories.gd" type="Script" id=14]
[ext_resource path="res://assets/themes/default_theme.tres" type="Theme" id=15]
[ext_resource path="res://components/theme_conntroller/theme.gd" type="Script" id=16]
[ext_resource path="res://assets/fonts/archivo-narrow/ArchivoNarrow-Bold.otf" type="DynamicFontData" id=17]
[ext_resource path="res://assets/images/trivia_quiz_logo.png" type="Texture" id=18]

[sub_resource type="GDScript" id=5]
script/source = "extends Node


export (Dictionary) var game_details = {\"name\":\"Quiz 1\", \"author\": \"Trivia Team\", \"about\": \"Quiz # 1 by trivia team zer0\"}
export (String) var quiz_complete_msg = \"Great Work!\"
onready var categories = self.get_node(\"categories\")._categories
#export (Dictionary) var categories = {
#	0: {\"name\": \"Art\", \"image\": \"//path\"},
#	1: {\"name\": \"Science\", \"image\": \"//path\"},
#	2: {\"name\": \"Film\", \"image\": \"//path\"},
#	3: {\"name\": \"History\", \"image\": \"//path\"},
#	4: {\"name\": \"Design\", \"image\": \"//path\"},
#	}
export (Theme) var theme

onready var questions = self.get_node(\"questions\").questions
#Homepage
export(Texture) var home_main_image


"

[sub_resource type="DynamicFont" id=4]
size = 23
font_data = ExtResource( 17 )

[sub_resource type="StyleBoxTexture" id=1]

[sub_resource type="Theme" id=2]
Panel/styles/panel = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.180392, 0.203922, 0.270588, 1 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.180392, 0.203922, 0.270588, 1 )

[sub_resource type="GradientTexture" id=6]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.105882, 0.0980392, 0.168627, 1 )

[sub_resource type="GradientTexture" id=12]

[sub_resource type="Animation" id=3]
resource_name = "intro"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("intro_canvas/intro_ui:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("main_canvas/main_ui")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0 ],
"method": "hide_all"
} ]
}

[node name="app_core" type="Node"]
script = ExtResource( 2 )

[node name="game_config" type="Node" parent="."]
script = SubResource( 5 )
__meta__ = {
"_editor_description_": ""
}
game_details = {
"about": "Quiz # 1 by trivia team",
"author": "Trivia Team",
"name": "Art-Science-GDScript"
}

[node name="categories" type="Node" parent="game_config"]
script = ExtResource( 14 )

[node name="questions" type="Node" parent="game_config"]
script = ExtResource( 3 )

[node name="theme" type="Node" parent="game_config"]
script = ExtResource( 16 )
theme = ExtResource( 15 )

[node name="main_canvas" type="CanvasLayer" parent="."]

[node name="main_ui" type="Control" parent="main_canvas"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 9 )

[node name="home_screen" type="Control" parent="main_canvas/main_ui" groups=["ui_page"]]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="vbox" type="VBoxContainer" parent="main_canvas/main_ui/home_screen"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 600, 200 )
size_flags_horizontal = 3

[node name="game_details" type="Panel" parent="main_canvas/main_ui/home_screen/vbox"]
margin_right = 600.0
margin_bottom = 100.0
rect_min_size = Vector2( 600, 100 )
theme = ExtResource( 15 )

[node name="VBoxContainer" type="VBoxContainer" parent="main_canvas/main_ui/home_screen/vbox/game_details"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="main_canvas/main_ui/home_screen/vbox/game_details/VBoxContainer"]
margin_right = 600.0
margin_bottom = 28.0
custom_fonts/normal_font = SubResource( 4 )
text = "Game Details"
fit_content_height = true

[node name="score_box" type="Panel" parent="main_canvas/main_ui/home_screen/vbox"]
margin_top = 104.0
margin_right = 600.0
margin_bottom = 704.0
rect_min_size = Vector2( 0, 600 )
theme = SubResource( 2 )

[node name="score_box_ul" type="VBoxContainer" parent="main_canvas/main_ui/home_screen/vbox/score_box"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="score_li" parent="main_canvas/main_ui/home_screen/vbox/score_box/score_box_ul" instance=ExtResource( 4 )]

[node name="score_box_bkgrnd_img" type="TextureRect" parent="main_canvas/main_ui/home_screen/vbox/score_box"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7

[node name="play" type="Button" parent="main_canvas/main_ui/home_screen/vbox"]
margin_top = 708.0
margin_right = 600.0
margin_bottom = 758.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 15 )
text = "PLAY"

[node name="settings" type="Button" parent="main_canvas/main_ui/home_screen/vbox"]
visible = false
margin_top = 762.0
margin_right = 600.0
margin_bottom = 812.0
rect_min_size = Vector2( 50, 50 )
icon = ExtResource( 6 )
flat = true
expand_icon = true

[node name="quiz_select" type="Control" parent="main_canvas/main_ui" groups=["ui_page"]]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 7
size_flags_vertical = 7
script = ExtResource( 10 )

[node name="vbox" type="VBoxContainer" parent="main_canvas/main_ui/quiz_select"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="quiz_category" type="Panel" parent="main_canvas/main_ui/quiz_select/vbox" groups=["themed"]]
margin_right = 600.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 15 )
script = ExtResource( 8 )

[node name="hbox" type="HBoxContainer" parent="main_canvas/main_ui/quiz_select/vbox/quiz_category"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="main_canvas/main_ui/quiz_select/vbox/quiz_category/hbox"]
margin_right = 355.0
margin_bottom = 50.0

[node name="spacer" type="ColorRect" parent="main_canvas/main_ui/quiz_select/vbox/quiz_category/hbox/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
color = Color( 0.231373, 0.301961, 0.490196, 0 )

[node name="category" type="Label" parent="main_canvas/main_ui/quiz_select/vbox/quiz_category/hbox/HBoxContainer"]
modulate = Color( 1, 1, 1, 0.501961 )
margin_left = 54.0
margin_top = 11.0
margin_right = 204.0
margin_bottom = 38.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 4 )
text = "Quiz Category"

[node name="spacer3" type="ColorRect" parent="main_canvas/main_ui/quiz_select/vbox/quiz_category/hbox/HBoxContainer"]
margin_left = 208.0
margin_right = 258.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
color = Color( 1, 1, 1, 0 )

[node name="OptionButton" type="OptionButton" parent="main_canvas/main_ui/quiz_select/vbox/quiz_category/hbox/HBoxContainer" groups=["themed"]]
margin_left = 262.0
margin_right = 355.0
margin_bottom = 50.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = ExtResource( 15 )
text = "Category"

[node name="quiz_type" type="Panel" parent="main_canvas/main_ui/quiz_select/vbox"]
margin_top = 54.0
margin_right = 600.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 15 )
custom_styles/panel = SubResource( 7 )
script = ExtResource( 12 )

[node name="hbox" type="HBoxContainer" parent="main_canvas/main_ui/quiz_select/vbox/quiz_type"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="main_canvas/main_ui/quiz_select/vbox/quiz_type/hbox"]
margin_right = 276.0
margin_bottom = 50.0

[node name="spacer" type="ColorRect" parent="main_canvas/main_ui/quiz_select/vbox/quiz_type/hbox/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
color = Color( 1, 1, 1, 0 )

[node name="category" type="Label" parent="main_canvas/main_ui/quiz_select/vbox/quiz_type/hbox/HBoxContainer"]
modulate = Color( 1, 1, 1, 0.501961 )
margin_left = 54.0
margin_top = 11.0
margin_right = 204.0
margin_bottom = 38.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 4 )
text = "Quiz Type"

[node name="spacer2" type="ColorRect" parent="main_canvas/main_ui/quiz_select/vbox/quiz_type/hbox/HBoxContainer"]
margin_left = 208.0
margin_right = 258.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
color = Color( 1, 1, 1, 0 )

[node name="OptionButton" type="OptionButton" parent="main_canvas/main_ui/quiz_select/vbox/quiz_type/hbox/HBoxContainer"]
margin_left = 262.0
margin_right = 276.0
margin_bottom = 50.0
mouse_default_cursor_shape = 2
theme = ExtResource( 15 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/normal = SubResource( 11 )

[node name="timer_select" type="Panel" parent="main_canvas/main_ui/quiz_select/vbox"]
visible = false
margin_top = 108.0
margin_right = 600.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 15 )
script = ExtResource( 13 )

[node name="HBoxContainer" type="HBoxContainer" parent="main_canvas/main_ui/quiz_select/vbox/timer_select"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="spacer" type="ColorRect" parent="main_canvas/main_ui/quiz_select/vbox/timer_select/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
color = Color( 1, 1, 1, 0 )

[node name="Label" type="Label" parent="main_canvas/main_ui/quiz_select/vbox/timer_select/HBoxContainer"]
modulate = Color( 1, 1, 1, 0.431373 )
margin_left = 54.0
margin_top = 11.0
margin_right = 204.0
margin_bottom = 38.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 4 )
text = "Timer"

[node name="spacer2" type="ColorRect" parent="main_canvas/main_ui/quiz_select/vbox/timer_select/HBoxContainer"]
margin_left = 208.0
margin_right = 258.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 0 )
color = Color( 1, 1, 1, 0 )

[node name="OptionButton" type="OptionButton" parent="main_canvas/main_ui/quiz_select/vbox/timer_select/HBoxContainer"]
margin_left = 262.0
margin_right = 325.0
margin_bottom = 50.0
mouse_default_cursor_shape = 2
text = "Timer"

[node name="start" type="Button" parent="main_canvas/main_ui/quiz_select/vbox"]
margin_top = 108.0
margin_right = 600.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 50 )
mouse_default_cursor_shape = 2
theme = ExtResource( 15 )
custom_styles/normal = SubResource( 8 )
text = "start"

[node name="category_image" type="TextureRect" parent="main_canvas/main_ui/quiz_select/vbox"]
margin_top = 162.0
margin_right = 600.0
margin_bottom = 812.0
rect_min_size = Vector2( 0, 650 )
texture = SubResource( 6 )
expand = true
stretch_mode = 6

[node name="quiz_box" type="Control" parent="main_canvas/main_ui" groups=["ui_page"]]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 11 )

[node name="VBoxContainer" type="VBoxContainer" parent="main_canvas/main_ui/quiz_box"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="main_canvas/main_ui/quiz_box/VBoxContainer"]
margin_right = 600.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
theme = ExtResource( 15 )
custom_styles/panel = SubResource( 13 )

[node name="HBoxContainer" type="HBoxContainer" parent="main_canvas/main_ui/quiz_box/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="category_label" type="Label" parent="main_canvas/main_ui/quiz_box/VBoxContainer/Panel/HBoxContainer"]
margin_top = 25.0
margin_right = 150.0
margin_bottom = 75.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = SubResource( 4 )
text = "total_quesetions"
align = 1
valign = 1

[node name="total_questions_label" type="Label" parent="main_canvas/main_ui/quiz_box/VBoxContainer/Panel/HBoxContainer"]
margin_left = 154.0
margin_top = 25.0
margin_right = 304.0
margin_bottom = 75.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = SubResource( 4 )
text = "total_quesetions"
align = 1
valign = 1

[node name="question_box" type="Panel" parent="main_canvas/main_ui/quiz_box/VBoxContainer"]
margin_top = 104.0
margin_right = 600.0
margin_bottom = 704.0
rect_min_size = Vector2( 0, 600 )
theme = ExtResource( 15 )

[node name="HBoxContainer" type="HBoxContainer" parent="main_canvas/main_ui/quiz_box/VBoxContainer/question_box"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="spacer4" type="ColorRect" parent="main_canvas/main_ui/quiz_box/VBoxContainer/question_box/HBoxContainer"]
margin_right = 60.0
margin_bottom = 600.0
rect_min_size = Vector2( 60, 30 )
color = Color( 1, 1, 1, 0 )

[node name="vbox" type="VBoxContainer" parent="main_canvas/main_ui/quiz_box/VBoxContainer/question_box/HBoxContainer"]
margin_left = 64.0
margin_right = 482.0
margin_bottom = 600.0

[node name="question_label" type="Label" parent="main_canvas/main_ui/quiz_box/VBoxContainer/question_box/HBoxContainer/vbox"]
margin_right = 418.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 5
custom_fonts/font = SubResource( 4 )
text = "Question Text"
align = 1
autowrap = true

[node name="img" type="TextureRect" parent="main_canvas/main_ui/quiz_box/VBoxContainer/question_box/HBoxContainer/vbox"]
margin_top = 104.0
margin_right = 418.0
margin_bottom = 329.0
rect_min_size = Vector2( 0, 225 )
expand = true
stretch_mode = 6

[node name="spacer3" type="ColorRect" parent="main_canvas/main_ui/quiz_box/VBoxContainer/question_box/HBoxContainer/vbox"]
margin_top = 333.0
margin_right = 418.0
margin_bottom = 363.0
rect_min_size = Vector2( 60, 30 )
color = Color( 1, 1, 1, 0 )

[node name="HBoxContainer2" type="HBoxContainer" parent="main_canvas/main_ui/quiz_box/VBoxContainer/question_box/HBoxContainer/vbox"]
margin_top = 367.0
margin_right = 418.0
margin_bottom = 479.0

[node name="spacer" type="ColorRect" parent="main_canvas/main_ui/quiz_box/VBoxContainer/question_box/HBoxContainer/vbox/HBoxContainer2"]
margin_right = 60.0
margin_bottom = 112.0
rect_min_size = Vector2( 60, 0 )
color = Color( 1, 1, 1, 0 )

[node name="HBoxContainer" type="VBoxContainer" parent="main_canvas/main_ui/quiz_box/VBoxContainer/question_box/HBoxContainer/vbox/HBoxContainer2"]
margin_left = 64.0
margin_right = 364.0
margin_bottom = 112.0

[node name="btn0" parent="main_canvas/main_ui/quiz_box/VBoxContainer/question_box/HBoxContainer/vbox/HBoxContainer2/HBoxContainer" instance=ExtResource( 5 )]
margin_top = 0.0
margin_right = 300.0
margin_bottom = 25.0
rect_min_size = Vector2( 300, 25 )
rect_clip_content = true
text = "answer"
align = 0

[node name="btn1" parent="main_canvas/main_ui/quiz_box/VBoxContainer/question_box/HBoxContainer/vbox/HBoxContainer2/HBoxContainer" instance=ExtResource( 5 )]
margin_top = 29.0
margin_right = 300.0
margin_bottom = 54.0
rect_min_size = Vector2( 300, 25 )
rect_clip_content = true
text = "answer"
align = 0

[node name="btn2" parent="main_canvas/main_ui/quiz_box/VBoxContainer/question_box/HBoxContainer/vbox/HBoxContainer2/HBoxContainer" instance=ExtResource( 5 )]
margin_top = 58.0
margin_right = 300.0
margin_bottom = 83.0
rect_min_size = Vector2( 300, 25 )
text = "answer"
align = 0

[node name="btn3" parent="main_canvas/main_ui/quiz_box/VBoxContainer/question_box/HBoxContainer/vbox/HBoxContainer2/HBoxContainer" instance=ExtResource( 5 )]
margin_top = 87.0
margin_right = 300.0
margin_bottom = 112.0
rect_min_size = Vector2( 300, 25 )
text = "answer"
align = 0

[node name="spacer2" type="ColorRect" parent="main_canvas/main_ui/quiz_box/VBoxContainer/question_box/HBoxContainer/vbox/HBoxContainer2"]
margin_left = 368.0
margin_right = 418.0
margin_bottom = 112.0
rect_min_size = Vector2( 50, 0 )
color = Color( 1, 1, 1, 0 )

[node name="main_background_texture" type="TextureRect" parent="main_canvas/main_ui"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = SubResource( 12 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="intro_canvas" type="CanvasLayer" parent="."]

[node name="intro_ui" type="Control" parent="intro_canvas"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 7 )

[node name="background_color" type="ColorRect" parent="intro_canvas/intro_ui"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.14902, 0.14902, 1 )

[node name="logo" type="TextureRect" parent="intro_canvas/intro_ui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -206.0
margin_top = -127.0
margin_right = 194.0
margin_bottom = 123.0
texture = ExtResource( 18 )
expand = true
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="intro_canvas"]
root_node = NodePath("../..")
autoplay = "intro"
anims/intro = SubResource( 3 )

[connection signal="pressed" from="main_canvas/main_ui/home_screen/vbox/play" to="main_canvas/main_ui/home_screen" method="_on_play_pressed"]
[connection signal="item_selected" from="main_canvas/main_ui/quiz_select/vbox/quiz_category/hbox/HBoxContainer/OptionButton" to="main_canvas/main_ui/quiz_select/vbox/quiz_category" method="_on_OptionButton_item_selected"]
[connection signal="item_selected" from="main_canvas/main_ui/quiz_select/vbox/quiz_type/hbox/HBoxContainer/OptionButton" to="main_canvas/main_ui/quiz_select/vbox/quiz_type" method="_on_OptionButton_item_selected"]
[connection signal="item_selected" from="main_canvas/main_ui/quiz_select/vbox/timer_select/HBoxContainer/OptionButton" to="main_canvas/main_ui/quiz_select/vbox/timer_select" method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="main_canvas/main_ui/quiz_select/vbox/start" to="main_canvas/main_ui/quiz_select" method="_on_start_pressed"]
[connection signal="animation_finished" from="intro_canvas/AnimationPlayer" to="intro_canvas/intro_ui" method="_on_AnimationPlayer_animation_finished"]
